[metadata]
name = pycloudtrace
version = attr: pycloudtrace.__version__
url = https://github.com/AbhishekSrikanth/pycloudtrace
project_urls =
    Documentation = https://github.com/AbhishekSrikanth/pycloudtrace
    Source Code = https://github.com/AbhishekSrikanth/pycloudtrace
    Issue Tracker = https://github.com/AbhishekSrikanth/pycloudtrace/issues
license_files = file: LICENSE
author = Abhishek Srikanth
author_email = abhisrik99@outlook.com
maintainer = Abhishek Srikanth
maintainer_email = abhisrik99@outlook.com
description = pycloudtrace provides a Python function for parsing data from the Cloudflare CDN "https://1.1.1.1/cdn-cgi/trace" endpoint.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    network information
    client device information
    CDN tracing
    HTTP headers
    Python library
    API client
    cloudflare
    DNS resolution
    IP address
    geo-location
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Networking
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = pycloudtrace
include_package_data = True
python_requires = >= 3.7
zip_safe = false
install_requires =
    requests>=2.26.0

[flake8]
exclude = build,.git,.tox,./tests/.env
